# mobile-unetplusplus-cac-scoring

./: .env.example  .gitignore  .pylintrc  Development.ipynb  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
main/dataloader/: data_downloader.py
notebooks/: 1 Preprocessing Visualization.ipynb  1.5 EDA.ipynb  2 Model Training Process.ipynb  3 Model Testing.ipynb  5 EDA.ipynb  6 Testing Preprocessing.ipynb  7 Testing Model.ipynb  speed.py
notes/: stanford_term_of_agreement.md
src/data/: __init__.py  downloader.py  dumper.py  gcs_cli.py  install_azcopy.sh  preprocess.py
src/data/preprocess/lib/: image.py  segmentation.py  tfrecord.py  utils.py
src/data/preprocess/pipeline/: image.py  segmentation.py  tfrecord.py
src/models/: base.py  block.py  builder.py  config.py  loss.py  train_model.py  utils.py
src/models/lib/: base.py  block.py  builder.py  config.py  data_loader.py  loss.py  utils.py
src/system/lib/: utils.py
src/system/pipeline/: output.py
tests/: test_dummy.py  test_preprocess.py  test_preprocess_lib.py  test_preprocess_lib_segmentation.py  test_preprocess_lib_utils.py  test_preprocess_pipeline.py  test_preprocess_pipeline_segmentation.py
