[tool.poetry]
name = "mobile-unetplusplus-cac-scoring"
version = "0.1.0"
description = ""
authors = ["Aditya Wardianto <aditya.wardianto@zero-one-group.com>"]
readme = "README.md"
packages = [{include = "mobile_unetplusplus_cac_scoring"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
tensorflow = "^2.11.0"
pydicom = "^2.3.1"
numpy = "^1.23.5"
streamlit = "^1.15.2"
python-dotenv = "^0.21.0"
tqdm = "^4.64.1"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
