[tool.poetry]
name = "mobile-unetplusplus-cac-scoring"
version = "0.1.0"
description = ""
authors = ["Aditya Wardianto <aditya.wardianto@zero-one-group.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
tensorflow = "^2.11.0"
pydicom = "^2.3.1"
numpy = "^1.23.5"
streamlit = "^1.15.2"
python-dotenv = "^0.21.0"
tqdm = "^4.64.1"
click = "^8.1.3"
h5py = "^3.8.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.1"
pytest = "^7.2.1"
autohooks = "^23.1.0"
autohooks-plugin-black = "^22.11.0"
autohooks-plugin-pylint = "^22.8.1"
autohooks-plugin-pytest = "^23.1.0"
autohooks-plugin-isort = "^22.8.0"
pyfakefs = "^5.1.0"
matplotlib = "^3.7.0"


[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.isort", "autohooks.plugins.pylint", "autohooks.plugins.pytest"]

[tool.autohooks.plugins.pylint]
include = ['src/**/*.py']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
