[tool.poetry]
name = "mobile-unetplusplus-cac-scoring"
version = "0.1.0"
description = ""
authors = ["Aditya Wardianto <aditya.wardianto@zero-one-group.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.11"
tensorflow = "^2.11.0"
pydicom = "^2.3.1"
numpy = "^1.23.5"
streamlit = "^1.15.2"
python-dotenv = "^0.21.0"
tqdm = "^4.64.1"
click = "^8.1.3"
h5py = "^3.8.0"
inquirer = "^3.1.3"
google-cloud-storage = "^2.9.0"
google-auth = "^2.17.3"
scikit-image = "^0.20.0"
opencv-contrib-python = "^4.7.0.72"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.1"
pytest = "^7.2.1"
autohooks = "^23.1.0"
autohooks-plugin-black = "^22.11.0"
autohooks-plugin-pylint = "^22.8.1"
autohooks-plugin-pytest = "^23.1.0"
autohooks-plugin-isort = "^22.8.0"
pyfakefs = "^5.1.0"
matplotlib = "^3.7.0"
pydot = "^1.4.2"
pydotplus = "^2.0.2"
graphviz = "^0.20.1"
black = "^23.3.0"
isort = "^5.12.0"
jupyterlab-code-formatter = "^1.6.1"


[tool.autohooks]
mode = "poetry"

[tool.autohooks.plugins.pylint]
include = ['src/**/*.py']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
